--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -21,7 +21,7 @@
                             <span>+1 (435) 797-4117</span></p>
                         <p class="__ci_num">Fax:
                             <span>+1 (435) 797-2766</span></p>
-                        <p class="__ci_num">E-mail:
+                        <p class="__ci_num">Email:
                             <span>rkaundal@usu.edu</span></p>
                     </footer>
                 </div>
