--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -13,13 +13,13 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("News") }}
 
-  <header class="sabbi-page-header page-header-lg">
+  <header class="kbl-header sabbi-page-header page-header-lg">
       <div class="page-header-content conternt-center">
           <div class="header-title-block">
               <h1 class="page-title">News</h1>
           </div>
       </div>
-  </header><!-- /.sabbi-page-header  -->
+  </header>
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
