--- a/src/views/pages/people/our-team/team-data.njk
+++ b/src/views/pages/people/our-team/team-data.njk
@@ -103,18 +103,6 @@
   }
 %}
 
-{% set akshat = {
-    name: "Akshat Kumar",
-    subtitle: "MS Student | CS",
-    modifier: "Axat",
-    type: "Graduate",
-    bio: "",
-    email: "k.akshat@aggiemail.usu.edu",
-    img: "asfh",
-    social: []
-  }
-%}
-
 {% set shelby = {
     name: "Shelby McCowan",
     subtitle: "HPC Administrator | BSc Biochemistry",
@@ -129,4 +117,4 @@
 
 <!-- Missing - Udarika Ediriweera, Raul Ramirez, Caleb Smith -->
 
-{% set staff = [roussie, kaige, cristian, naveen, suyash, nikhil, matt, akshat, shelby] %}
+{% set staff = [roussie, kaige, cristian, naveen, suyash, nikhil, matt, shelby] %}
