--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -13,13 +13,13 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Events") }}
 
-  <header class="sabbi-page-header page-header-lg">
+  <header class="kbl-header sabbi-page-header page-header-lg">
       <div class="page-header-content conternt-center">
           <div class="header-title-block">
               <h1 class="page-title">Events</h1>
           </div>
       </div>
-  </header><!-- /.sabbi-page-header -->
+  </header>
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
