--- a/src/views/universal/_footer-scripts.njk
+++ b/src/views/universal/_footer-scripts.njk
@@ -50,6 +50,162 @@ $(".selector").css({
 });
 });
 
+$(document).ready(function(){
+            $("body").on("click","#modalbtn",function(){
+
+           $("#myModal").modal("show");
+
+           $(".blue").addClass("after_modal_appended");
+           $('.modal-backdrop').appendTo('.blue');
+           $('body').removeClass("modal-open")
+               $('body').css("padding-right","");
+     });
+    //       $(window).scroll(function(){
+
+    //         if($(window).scrollTop()>100){
+    //           $('.navbar-collapse').css('background-color', '#0f2439');
+    //         }else{
+    //           $('.navbar-collapse').css('background-color', 'transparent');
+    //         }
+
+    //       });
+
+     });
+
+     $(document).ready(function () {
+                 var itemsMainDiv = ('.MultiCarousel');
+                 var itemsDiv = ('.MultiCarousel-inner');
+                 var itemWidth = "";
+
+                 $('.leftLst, .rightLst').click(function () {
+                     var condition = $(this).hasClass("leftLst");
+                     if (condition)
+                         click(0, this);
+                     else
+                         click(1, this)
+                 });
+
+                 ResCarouselSize();
+
+
+
+
+                 $(window).resize(function () {
+                     ResCarouselSize();
+                 });
+
+                 //this function define the size of the items
+                 function ResCarouselSize() {
+                     var incno = 0;
+                     var dataItems = ("data-items");
+                     var itemClass = ('.item');
+                     var id = 0;
+                     var btnParentSb = '';
+                     var itemsSplit = '';
+                     var sampwidth = $(itemsMainDiv).width();
+                     var bodyWidth = $('body').width();
+                     $(itemsDiv).each(function () {
+                         id = id + 1;
+                         var itemNumbers = $(this).find(itemClass).length;
+                         btnParentSb = $(this).parent().attr(dataItems);
+                         itemsSplit = btnParentSb.split(',');
+                         $(this).parent().attr("id", "MultiCarousel" + id);
+
+
+                         if (bodyWidth >= 1200) {
+                             incno = itemsSplit[3];
+                             itemWidth = sampwidth / incno;
+                         }
+                         else if (bodyWidth >= 992) {
+                             incno = itemsSplit[2];
+                             itemWidth = sampwidth / incno;
+                         }
+                         else if (bodyWidth >= 768) {
+                             incno = itemsSplit[1];
+                             itemWidth = sampwidth / incno;
+                         }
+                         else {
+                             incno = itemsSplit[0];
+                             itemWidth = sampwidth / incno;
+                         }
+                         $(this).css({ 'transform': 'translateX(0px)', 'width': itemWidth * itemNumbers });
+                         $(this).find(itemClass).each(function () {
+                             $(this).outerWidth(itemWidth);
+                         });
+
+                         $(".leftLst").addClass("over");
+                         $(".rightLst").removeClass("over");
+
+                     });
+                 }
+
+
+                 //this function used to move the items
+                 function ResCarousel(e, el, s) {
+                     var leftBtn = ('.leftLst');
+                     var rightBtn = ('.rightLst');
+                     var translateXval = '';
+                     var divStyle = $(el + ' ' + itemsDiv).css('transform');
+                     var values = divStyle.match(/-?[\d\.]+/g);
+                     var xds = Math.abs(values[4]);
+                     if (e == 0) {
+                         translateXval = parseInt(xds) - parseInt(itemWidth * s);
+                         $(el + ' ' + rightBtn).removeClass("over");
+
+                         if (translateXval <= itemWidth / 2) {
+                             translateXval = 0;
+                             $(el + ' ' + leftBtn).addClass("over");
+                         }
+                     }
+                     else if (e == 1) {
+                         var itemsCondition = $(el).find(itemsDiv).width() - $(el).width();
+                         translateXval = parseInt(xds) + parseInt(itemWidth * s);
+                         $(el + ' ' + leftBtn).removeClass("over");
+
+                         if (translateXval >= itemsCondition - itemWidth / 2) {
+                             translateXval = itemsCondition;
+                             $(el + ' ' + rightBtn).addClass("over");
+                         }
+                     }
+                     $(el + ' ' + itemsDiv).css('transform', 'translateX(' + -translateXval + 'px)');
+                 }
+
+                 //It is used to get some elements from btn
+                 function click(ell, ee) {
+                     var Parent = "#" + $(ee).parent().attr("id");
+                     var slide = $(Parent).attr("data-slide");
+                     ResCarousel(ell, Parent, slide);
+                 }
+
+             });
+
+             //randomize carousel
+             var $cont = $('#content'),
+                 itemsArr = $cont.children().get();
+
+
+             $cont.append(shuffle(itemsArr))
+
+             function shuffle(a) {
+                 var j, x, i;
+                 for (i = a.length; i; i--) {
+                     j = Math.floor(Math.random() * i);
+                     x = a[i - 1];
+                     a[i - 1] = a[j];
+                     a[j] = x;
+                 }
+                 return a;
+             }
+
+             //show button on hover
+             $(document).ready(function () {
+                 $(document).on('mouseenter', '.divbutton', function () {
+                     $(this).find(":button").show();
+                 }).on('mouseleave', '.divbutton', function () {
+                     $(this).find(":button").hide();
+                 });
+             });
+
 function openAllTools(evt, yearName) {
 
 var i, tabcontent, tablinks;
@@ -67,6 +223,40 @@ for (j = 0; j < yearName.length; j++){
     console.log(yearName[j]);
 document.getElementById(yearName[j]).style.display = "block";
 }
+}
+
+function openAboutModal(evt, personName, about, title, subTitle, email) {
+
+titleContent = document.getElementsByClassName("modal-title");
+for (i = 0; i < titleContent.length; i++) {
+titleContent[i].style.display = "none";
+}
+
+subtitleContent = document.getElementsByClassName("modalsubtitle");
+for (i = 0; i < subtitleContent.length; i++) {
+subtitleContent[i].style.display = "none";
+}
+
+teamcontent = document.getElementsByClassName("teamcontent");
+for (i = 0; i < teamcontent.length; i++) {
+teamcontent[i].style.display = "none";
+}
+
+teamemail = document.getElementsByClassName("teamemail");
+for (i = 0; i < teamemail.length; i++) {
+teamemail[i].style.display = "none";
+}
+document.getElementById(about).style.display = 'block'
+document.getElementById(title).style.display = 'block'
+document.getElementById(subTitle).style.display = 'block'
+document.getElementById(email).style.display = 'block'
+
+console.log(document.getElementById(personName).src);
+var cardImage = document.getElementsByClassName("detailsCard")
+cardImage[0].src = document.getElementById(personName).src
+
+
+
 }
 </script>
 {% endmacro %}
