--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,36 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+ /* Custom Button in this absolute mess of CSS */
+ .navbar-button {
+   font-weight: 500!important;
+   cursor: pointer;
+   transition: all 0.25s!important;
+   color: #d30015!important;
+   border: solid 1px #d30015!important;
+   border-radius: 5px!important;
+   margin-left: 15px!important;
+   font-family: 'Montserrat', sans-serif!important;
+   padding: 7px 12px!important;
+ }
+
+ .navbar-button:hover {
+   background: #d30015!important;
+   color: white!important;
+ }
+
+ .navbar-nav {
+   margin-top: 11px!important;
+ }
+
+ /* typo is intentional, that's how the template creators spelt it... */
+ .pfofile-social li a {
+   transition: all 0.25s;
+ }
+
+ .btn {
+   transition: all 0.3s!important;
+ }
 
 .kbl-header {
   background-image: url(/assets/img/old_main_contact.jpg);
@@ -12,4 +42,49 @@
 
 .kbl-header.research {
   background-image: url(/assets/img/events_slide.jpg)!important;
+}
+
+.kbl-card-header {
+  color: #1e7efc;
+  transition: 0.3s;
+}
+
+.thumbnail:hover .kbl-card-header {
+  color: #d43a49;
+}
+
+/* NEWS cards */
+.news-item {
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.news-item:hover {
+  border-color: #e66767!important;
+}
+
+.news-item .header {
+  font-size: 130%;
+  font-weight: 700;
+}
+
+.news-item .desc {
+  font-size: 100%;
+  font-weight: 400;
+  color: #909090;
+  margin-top: 10px;
+}
+
+.col-header {
+  color: #2f2f2f;
+}
+
+.logo_text1 {
+  color: #0f2439;
+  /* background-image: url(https://media.giphy.com/media/Lr2xYGw6IMVofbjRSu/giphy.gif); */
+  font-weight: 700;
+  letter-spacing: 12px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  /* color: white;
+text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
 }
