--- a/src/views/universal/_footer-scripts.njk
+++ b/src/views/universal/_footer-scripts.njk
@@ -13,6 +13,7 @@
 <script src="assets/tools/sequence/js/hammer.min.js"></script>
 <script src="assets/tools/sequence/js/sequence.min.js"></script>
 <script src="assets/tools/intlTelInput/js/intlTelInput.js"></script>
+<script src="assets/tools/lightbox/ekko-lightbox.min.js"></script>
 <script src="assets/tools/dropdownhover/js/bootstrap-dropdownhover.min.js"></script>
 <!-- site-spec -->
 <script src="assets/js/vendor/bootstrap.min.js"></script>
