--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -25,6 +25,7 @@
     <link href="assets/tools/dropdownhover/css/bootstrap-dropdownhover.min.css" rel="stylesheet">
 
     <!-- site spec -->
+    <link href="assets/tools/lightbox/ekko-lightbox.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
