--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -7,13 +7,13 @@
     <base href="{{ baseUrl }}" />
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    {% if scss %}
+      <link rel="stylesheet" href="assets/kbl-css/style.css">
+    {% endif %}
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Latest compiled and minified CSS -->
     {% if bs4 %}
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    {% endif %}
-    {% if scss %}
-      <link rel="stylesheet" type="text/css" href="/scss/biotec/css/style.css">
     {% endif %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Open+Sans:300,400,400i,600,700" rel="stylesheet">
