--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -30,10 +30,10 @@
       </section>
       <section class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
           <div class="nav-btn-wrap btn-group pull-right">
-              <a class="kbl-btn" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
+              <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                   Covid 19 Tracker
               </a>
-              <a class="navbar-button" href="#enroll">
+              <a class="kbl-btn-1" href="#enroll">
                   Join Research
               </a>
           </div>
