Nav options SCSS

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -5,3 +5,8 @@ $btn-radius: 5px;
 $time-slow: 0.35s;
 $time-mid: 0.3s;
 $time-fast: 0.2s;
+
+// Font Weights - you should only need 3-4
+$font-weight-light: 400;
+$font-weight-medium: 600;
+$font-weight-heavy: 700;
