--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -2,14 +2,12 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <title>Kaundal Bioinformatics Laboratory</title>
+    <title>KAABiL</title>
     {% from "env.njk" import baseUrl %}
     <base href="{{ baseUrl }}" />
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    {% if scss %}
-      <link rel="stylesheet" href="assets/kbl-css/style.css">
-    {% endif %}
+    <link rel="stylesheet" href="assets/kbl-css/style.css">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Latest compiled and minified CSS -->
     {% if bs4 %}
