--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -11,13 +11,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a style="text-decoration:none" class="navbar-brand" href="index.html">
+          <a style="text-decoration:none" class="navbar-brand" href="/">
             <img alt="" class="img-responsive" src="assets/img/red_logo.png">
           </a>
-          <div class="logo_text1" style="line-height: 0.5; margin-left: 85px; padding-top: 28px; font-size: 24px;  width: 310px;">KAABiL</div>
+          <div class="logo-heading">KAABiL</div>
 
           <div class="vl">
-              <div class="logo_text" style="line-height: 1; padding-top: 4px; color:#044f9f ; font-size: 12px; font-weight: normal; width: 310px;  font-style: normal; ">
+              <div class="logo-text">
                   <b style="color: #9d164f;">K</b>aundal
                   <b style="color: #9d164f;">A</b>rtificial intelligence
                   <br>
@@ -42,7 +42,7 @@
             {% from "./_navbar-options.njk" import navOptions, calcDropdown, anchorGen, toolAnchorGen %}
 
             {% for option in navOptions %}
-              <li class="{{ calcDropdown(option.options)}} {{ activeRoute(option.name, activePage) }}">
+              <li class="nav-option {{ calcDropdown(option.options)}} {{ activeRoute(option.name, activePage) }}">
                   {{ anchorGen(option.name, option.options, option.link) }}
                   {% if option.options %}
                   <ul class="dropdown-menu" role="menu">
