Fixed many links, added 404

--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -23,7 +23,7 @@
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li class="active">Contact</li>
           </ol>
       </div>
@@ -88,7 +88,7 @@
                      <h2 class="font-md__x stage-vrb-title">Postdoctoral Research Fellow</h2>
                      <p style="text-align: justify;">A postdoctoral research fellow with strong research and publication records in the area
                                                       of bioinformatics and computational biology is encouraged to
-                                                      directly contact <a href="professor.html">Dr. Kaundal</a> to express interest.</p>
+                                                      directly contact <a href="people/rakesh">Dr. Kaundal</a> to express interest.</p>
 
                      <h3 class="__fm_title" id="enroll">Key criteria</h3>
                      <p style="text-align: justify;" class="future_member-text">A PhD in one or
