--- a/src/views/pages/home/paper.njk
+++ b/src/views/pages/home/paper.njk
@@ -20,7 +20,7 @@
                             <li>methylation patterns (Methyl-seq)</li>
                             <li>GBS data, assembly of novel genomes, etc.</li>
                         </ul>
-                        <div class="action-wrap"><a href="lab_journal.html"
+                        <div class="action-wrap"><a href="/research/lab-research"
                                 class=" btn-unsolemn btn-action read-more">View all Publications</a></div>
                     </div><!-- /.entry-meta -->
                 </div>
