--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -18,7 +18,7 @@
                                         src="assets/img/profile/social/id.png" alt="sabbi-social"
                                         class="img-responsive"></a></li>
                         </ul>
-                        <div class="action-wrap" style="padding-bottom: 15px;"><a href="professor.html"
+                        <div class="action-wrap" style="padding-bottom: 15px;"><a href="/people/rakesh"
                                 class=" btn-unsolemn btn-action read-more">Read More</a></div>
                     </div>
                 </article>
@@ -117,7 +117,8 @@
                 </div>
             </div>
         </div>
-        <div class="action-wrap text-right-sm"><a href="ourteam.html" class="btn btn-unsolemn btn-action">View
-                all</a></div>
+        <div class="action-wrap text-right-sm">
+          <a href="/people/our-team" class="btn btn-unsolemn btn-action">View all</a>
+        </div>
     </div>
 </section>
