--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -4,7 +4,9 @@
             <div class="col-sm-3">
                 <div class="footer-site-info">
                     <header>
-                        <a class="footer-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/bioinfo_logo.png"></a>
+                        <a class="footer-brand" href="/">
+                          <img alt="" class="img-responsive" src="assets/img/bioinfo_logo.png">
+                        </a>
                     </header>
                     <address>
                         <h3 class="entry-title">Address</h3>
@@ -53,13 +55,13 @@
                                 <h2 class="widget-title">People</h2>
                                 <ul class="list list-unstyled list-footer-nav">
                                     <li class="footer_text">
-                                        <a href="professor.html">Dr. Kaundal</a>
+                                        <a href="/people/rakesh">Dr. Kaundal</a>
                                     </li>
                                     <li class="footer_text">
-                                        <a href="ourteam.html">Our Team</a>
+                                        <a href="/people/our-team">Our Team</a>
                                     </li>
                                     <li class="footer_text">
-                                        <a href="people.html">Alumni</a>
+                                        <a href="/people/our-team">Alumni</a>
                                     </li>
                                 </ul>
                             </div>
@@ -71,10 +73,10 @@
                                 <h2 class="widget-title">Publications</h2>
                                 <ul class="list list-unstyled list-footer-nav">
                                     <li class="footer_text">
-                                        <a href="lab_journal.html">Journal Articles</a>
+                                        <a href="/publications/journal-articles">Journal Articles</a>
                                     </li>
                                     <li class="footer_text">
-                                        <a href="lab_conf-talk.html">Conferences and Talks</a>
+                                        <a href="/publications/conferences">Conferences and Talks</a>
                                     </li>
                                 </ul>
                             </div>
@@ -90,7 +92,7 @@
                         <ul class="event-list list-unstyled">
                             <li class="lst_news_item">
                                 <h4 class="title">
-                                    <a href="events_single.html?event=psc">PSC Showcase</a>
+                                    <a href="/events">PSC Showcase</a>
                                 </h3>
                                 <div>
                                     <span class="date">March 23, 2019</span>
@@ -98,7 +100,7 @@
                             </li>
                             <li class="lst_news_item">
                                 <h4 class="title">
-                                    <a href="events_single.html?event=rocky">Rocky Bioinformatics Conference</a>
+                                    <a href="events">Rocky Bioinformatics Conference</a>
                                 </h3>
                                 <div>
                                     <span class="date">December 5-7, 2018</span>
@@ -106,7 +108,7 @@
                             </li>
                             <li class="lst_news_item">
                                 <h4 class="title">
-                                    <a href="events_single.html?event=osu">Won President's Cup at OSU</a>
+                                    <a href="events">Won President's Cup at OSU</a>
                                 </h3>
                                 <div>
                                     <span class="date">December 10, 2013</span>
@@ -114,7 +116,7 @@
                             </li>
                         </ul>
                         <div class="action-wrap">
-                            <a href="lab_events.html" class="btn btn-unsolemn btn-action">View all Events</a>
+                            <a href="events" class="btn btn-unsolemn btn-action">View all Events</a>
                         </div>
                     </address>
                 </div>
@@ -127,13 +129,13 @@
                 <div class="col-sm-8">
                     <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
                         <div class="copyright">Copyright 2020 -
-                            <a href="index.html">KAABiL Lab</a>
+                            <a href="/">KAABiL Lab</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4 ">
                     <div class="powredby">Developed and managed by:
-                        <a href="ourteam.html">Kaundal Research Group</a>
+                        <a href="/people/our-team">Kaundal Research Group</a>
                     </div>
                 </div>
             </div>
