--- a/src/views/pages/people/alumni/alumni.njk
+++ b/src/views/pages/people/alumni/alumni.njk
@@ -23,7 +23,7 @@
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li class="active"><a href="#">Alumni</a></li>
               <!-- <li class="active">People</li> -->
           </ol>
