--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -23,7 +23,7 @@
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li><a href="#">People</a></li>
               <li class="active">Our Team</li>
           </ol>
@@ -35,7 +35,7 @@
               <div class="row">
                   <div class="col-md-3 col-sm-3 zoom">
                       <div class="profile-card profile-card-meta_classic">
-                          <a href="professor.html">
+                          <a href="/people/rakesh">
                           <figure>
                               <img class="img-responsive" style="width: 210px; height:210px" src="assets/img/profile/RK_2.jpg" alt="sabbi-profile-pic">
                               <figcaption>
