--- a/src/views/pages/publications/conferences/conferences.njk
+++ b/src/views/pages/publications/conferences/conferences.njk
@@ -23,7 +23,7 @@
   <div class="auth-breadcrumb-wrap">
           <div class="container">
               <ol class="breadcrumb sabbi-breadcrumb">
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="/">Home</a></li>
                   <li><a href="#">Publications</a></li>
                   <li class="active">Conferences and Talks</li>
               </ol>
