--- a/src/views/pages/publications/journal-articles/journal-articles.njk
+++ b/src/views/pages/publications/journal-articles/journal-articles.njk
@@ -24,7 +24,7 @@
   <div class="auth-breadcrumb-wrap">
           <div class="container">
               <ol class="breadcrumb sabbi-breadcrumb">
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="/">Home</a></li>
                   <li><a href="#">Publications</a></li>
                   <li class="active">Journal Articles</li>
               </ol>
