--- a/src/views/pages/research/research-articles/research-articles.njk
+++ b/src/views/pages/research/research-articles/research-articles.njk
@@ -23,7 +23,7 @@
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li class="active"><a href="#">Research Articles</a></li>
           </ol>
       </div>
