--- a/src/views/pages/err/404/404.njk
+++ b/src/views/pages/err/404/404.njk
@@ -11,7 +11,7 @@
   <div class="mass-pad-y error-bg">
     <h1 class="text-center">404 Error</h1><br><br>
     <h4 class="text-center">
-      It looks like you've found a part of the site that exist. Click anywhere to go back.
+      It looks like you've found a part of the site that doesn't exist! Click anywhere to go back.
     </h4>
   </div>
 </a>
