--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -16,7 +16,7 @@
   <header class="kbl-header sabbi-page-header page-header-lg">
       <div class="page-header-content conternt-center">
           <div class="header-title-block">
-              <h1 class="page-title">News</h1>
+              <h1 class="page-title green-text">News</h1>
           </div>
       </div>
   </header>
