--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <!--I can write -->
 {% from "universal/_header.njk" import header %}
-{{ header("news") }}
+{{ header() }}
 
 <body class="auth-theme-rashmore">
   {% from "universal/_navbar.njk" import navbar %}
@@ -69,7 +69,7 @@
   <article class="flex-col">
     <div class="text-center col-header" style="font-size: 140%;"><b>Science</b></div><br>
     <section>
-      <a class="thumbnail news-item" href="news-template.html">
+      <a class="thumbnail news-item" href="/news/newblog">
         <div class="caption">
           <h5 class="header">deepHPI is Online!</h5>
           <p class="desc">
@@ -92,15 +92,22 @@
 
   <!-- Blog -->
   <article class="col-sm-3">
-    <div class="text-center col-header" style="font-size: 140%;"><b>Blog</b></div><br>
-    <section class="thumbnail news-item">
-      <img src="assets/kbl-img/blog.png" alt="...">
-      <div class="caption">
-        <h5 class="header">New Blog</h5>
-        <p class="desc">
-          KAABiL has a blog that we might write to one day.
-        </p>
-      </div>
+    <div class="text-center col-header" style="font-size: 140%;">
+      <b>Blog</b>
+    </div>
+
+    <br>
+
+    <section>
+      <a class="thumbnail news-item" href="/news/newblog">
+        <img src="assets/kbl-img/blog.png" alt="...">
+        <div class="caption">
+          <h5 class="header">New Blog</h5>
+          <p class="desc">
+            KAABiL has a blog that we might write to one day.
+          </p>
+        </div>
+      </a>
     </section>
   </article>
 
