Remove useless CSS

--- a/src/views/pages/people/rakesh/rakesh.njk
+++ b/src/views/pages/people/rakesh/rakesh.njk
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <!--I can write -->
 {% from "universal/_header.njk" import header %}
-{{ header("professor") }}
+{{ header() }}
 
 <body class="auth-theme-rashmore">
   {% from "universal/_navbar.njk" import navbar %}
