--- a/src/views/pages/news/template.njk
+++ b/src/views/pages/news/template.njk
@@ -15,7 +15,7 @@
     {% from "universal/_navbar.njk" import navbar %}
     {{ navbar("News") }}
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top: 103px;">
       <div class="row">
         <div class="col-xs-6 col-xs-offset-3">
           {% include (file) %}
