--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <!--I can write -->
 {% from "universal/_header.njk" import header %}
-{{ header("ourteam") }}
+{{ header("people") }}
 
 <body class="auth-theme-rashmore">
   {% from "universal/_navbar.njk" import navbar %}
