--- a/src/views/pages/news/newblog/content.njk
+++ b/src/views/pages/news/newblog/content.njk
@@ -1,1 +1,4 @@
-<h1>Hi</h1>
+<p class="blog">
+  This post is nothing more than a quick announcement and a reminder to keep an eye on
+  the Bioinfo USU page for future content. Stay healthy!
+</p>
