--- a/src/views/pages/news/newblog/newblog.njk
+++ b/src/views/pages/news/newblog/newblog.njk
@@ -1,3 +1,3 @@
 {% from "pages/news/template.njk" import newsPage %}
 
-{{ newsPage("New Blog", "newblog", "New Blog") }}
+{{ newsPage("KAABiL is Starting a Blog!", "newblog", "New Blog") }}
