--- a/src/views/pages/news/template.njk
+++ b/src/views/pages/news/template.njk
@@ -18,6 +18,7 @@
     <div class="container-fluid" style="margin-top: 103px;">
       <div class="row">
         <div class="col-xs-6 col-xs-offset-3">
+          <h1 class="text-center blog">{{ title }}</h1>
           {% include (file) %}
         </div>
       </div>
