--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,3 +20,11 @@
 body {
   color: $color-text-main;
 }
+
+.section-footer {
+  background: #e3e3e3!important;
+
+  .footer-bar {
+    background: #fff!important;
+  }
+}
