--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -1,11 +1,11 @@
 <footer class="section-footer mt_25">
-  <div class="container">
+  <div class="container footer">
         <div class="row">
             <div class="col-sm-3">
                 <div class="footer-site-info">
                     <header>
                         <a class="footer-brand" href="/">
-                          <img alt="" class="img-responsive" src="assets/img/bioinfo_logo.png">
+                          <img alt="" class="img-responsive" src="assets/img/bioinfo_logoaa.png">
                         </a>
                     </header>
                     <address>
