--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -68,26 +68,24 @@
   <!-- News - Science -->
   <article class="flex-col">
     <div class="text-center col-header" style="font-size: 140%;"><b>Science</b></div><br>
-    <section>
-      <a class="thumbnail news-item" href="/news/newblog">
-        <div class="caption">
-          <h5 class="header">deepHPI is Online!</h5>
-          <p class="desc">
-            To bolster and accelerate research on infectious disease, we have implemented deepHPI.
-            The deepHPI web server is a platform that uses Convolutional Neural Network (CNN)...
-          </p>
-        </div>
-      </a>
-    </section>
+    <a class="thumbnail news-item" href="/news/newdeephpi">
+      <div class="caption">
+        <h5 class="header">deepHPI is Online!</h5>
+        <p class="desc">
+          To bolster and accelerate research on infectious disease, we have implemented deepHPI.
+          The deepHPI web server is a platform that uses Convolutional Neural Network (CNN)...
+        </p>
+      </div>
+    </a>
 
-    <section class="thumbnail news-item">
+    <a class="thumbnail news-item" href="/news/covidtracker">
       <div class="caption">
         <h5 class="header">COVID-19 Tracker</h5>
         <p class="desc">
           KAABiL now has a dashboard for tracking global COVID-19 data
         </p>
       </div>
-    </section>
+    </a>
   </article>
 
   <!-- Blog -->
