--- a/src/views/universal/navbar-active-route.njk
+++ b/src/views/universal/navbar-active-route.njk
@@ -10,3 +10,9 @@
     active
   {% endif %}
 {% endmacro %}
+
+{% macro currentRoute(routeName, activeRoute) %}
+  {% if routeName === activeRoute %}
+    current
+  {% endif %}
+{% endmacro %}
