Added ranchSAT, changing news

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,6 +1,7 @@
 @import '../colors';
 @import '../globals';
 
+/*
 .nav-option {
   font-weight: 600;
   border-bottom: 4px solid $transparent;
@@ -41,3 +42,4 @@
   padding-top: 0!important;
   padding-bottom: 0!important;
 }
+*/
