--- a/src/views/universal/_navbar-bs4.njk
+++ b/src/views/universal/_navbar-bs4.njk
@@ -5,12 +5,12 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
   <article class="container-fluid px-5">
     <section class="row px-5 w-100 mb-1">
-      <div class="col-3">
+      <div class="col-3 pl-5">
         <a class="navbar-brand d-inline" href="#">
           <img src="/assets/img/kbllogo.png">
         </a>
       </div>
-      <div class="col-9 mt-auto">
+      <div class="col-9 mt-auto pr-5">
         <section class="row pb-4">
           <div class="col-12 text-right">
             <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
