--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -34,6 +34,7 @@
 {% set tools = {
   name: "Tools",
   options: [
+    {name: "ranchSATdb", link: "http://bioinfo.usu.edu/ranchSATdb/"},
     {name: "deepHPI", link: "http://bioinfo.usu.edu/deepHPI/"},
     {name: "NECminer", link: "http://bioinfo.usu.edu/NECminer/"},
     {name: "PredHPI", link: "http://bioinfo.usu.edu/PredHPI/"},
