--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,6 +1,6 @@
 $color-primary: #d0192a;
 
-$color-border-gray: #e3e3e3;
+$color-border-gray: #d1d1d1;
 
 $transparent: rgba(#fff, 0);
 $color-text-main: #303030;
